DOCS: Screenshot and features added on site

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,6 +51,18 @@
       <!--  <i class="fab fa-kaggle"></i> Kaggle Notebook-->
       <!--</a>-->
     </div>
+
+    <div class="checklist">
+      <h1>Features</h1>
+      <ul>
+        <li class="completed">Interactive Drawing Canvas: Users can draw on the web page.</li>
+        <li class="completed">MNIST-trained Model: The model is trained on the MNIST dataset, a standard dataset for
+          handwritten digit recognition.</li>
+        <li class="completed">Single Digit numbers: Can predict single digit numbers.</li>
+        <li>All numbers: Enable the model to recognize and interpret multi-digit numbers (e.g., 123).</li>
+        <li>Calculate arithmetic operations: Users can draw for example 2+2 and the model will output 4.</li>
+      </ul>
+    </div>
   </div>
   <script src="{{ url_for('static', filename='canvas.js') }}"></script>
   <script>
